# NoLongerEvil-SelfHosted

./: README.md  pyproject.toml
src/nolongerevil/middleware/: debug_logger.py
src/nolongerevil/routes/control/: status.py
src/nolongerevil/routes/nest/: pro_info.py
tests/: test_device_network_fields.py
